--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<div class="media block-6 services d-block">
 									<div class="media-body p-2 mt-3">
 										<span class="subheading subheading-with-line"><small
-												class="pr-2 bg-light text-primary">2022 - Present</small></span>
+												class="pr-2 bg-white text-primary">2022 - Present</small></span>
 										<h4 class="heading"><a target="_blank" href="https://techeniac.com/">TechEniac Services LLP</a>
 										</h4>
 										<p>Here I'm working as a full time senior developer. Technologies, which I am working on Laravel, ReactJs, etc.</p>
@@ -117,7 +117,7 @@
 								<div class="media block-6 services d-block">
 									<div class="media-body p-2 mt-3">
 										<span class="subheading subheading-with-line"><small
-												class="pr-2 bg-light text-primary">2020 - 2022</small></span>
+												class="pr-2 bg-white text-primary">2020 - 2022</small></span>
 										<h4 class="heading"><a target="_blank" href="https://goldengatetechnolabs.com/">GoldenGate
 												Technolabs</a></h4>
 										<p>Here I have worked as a full time senior developer. Technologies, which I have worked on are Laravel, Wordpress, etc.</p>
@@ -128,7 +128,7 @@
 								<div class="media block-6 services d-block">
 									<div class="media-body p-2 mt-3">
 										<span class="subheading subheading-with-line"><small
-												class="pr-2 bg-light text-primary">2016 - 2020</small></span>
+												class="pr-2 bg-white text-primary">2016 - 2020</small></span>
 										<h4 class="heading"><a target="_blank" href="http://codesnakers.com/">CodeSnakers</a></h4>
 										<p>Here I work with a great Mentor as a part time web developer. Technologies, which I have worked on are Laravel, Wordpress, etc.</p>
 									</div>
