--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="title" content="Yash Trivedi - Web Developer">
-	<meta name="description" content="Hi there I'm Yash and I create beautiful and efficient websites. I develop scalable, secure, object-oriented Web applications, with a focus on clean code, development standards, and optimal database Structures. Constantly pursuing to be a better software engineer. I am comfortable working In a team as well as an individual.">
+	<meta name="description"
+		content="Hi there I'm Yash and I create beautiful and efficient websites. I develop scalable, secure, object-oriented Web applications, with a focus on clean code, development standards, and optimal database Structures. Constantly pursuing to be a better software engineer. I am comfortable working In a team as well as an individual.">
 	<meta property="og:title" content="Yash Trivedi - Web Developer" />
 	<meta property="og:url" content="https://yash-trivedi-dev.github.io/" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Hi there I'm Yash and I create beautiful and efficient websites. I develop scalable, secure, object-oriented Web applications, with a focus on clean code, development standards, and optimal database Structures. Constantly pursuing to be a better software engineer. I am comfortable working In a team as well as an individual." />
+	<meta property="og:description"
+		content="Hi there I'm Yash and I create beautiful and efficient websites. I develop scalable, secure, object-oriented Web applications, with a focus on clean code, development standards, and optimal database Structures. Constantly pursuing to be a better software engineer. I am comfortable working In a team as well as an individual." />
 	<meta property="og:image" content="https://yash-trivedi-dev.github.io/images/yash-trivedi.jpg" />
 	<meta name="twitter:title" content="Yash Trivedi - Web Developer" />
-	<meta name="twitter:description" content="Hi there I'm Yash and I create beautiful and efficient websites. I develop scalable, secure, object-oriented Web applications, with a focus on clean code, development standards, and optimal database Structures. Constantly pursuing to be a better software engineer. I am comfortable working In a team as well as an individual." />
+	<meta name="twitter:description"
+		content="Hi there I'm Yash and I create beautiful and efficient websites. I develop scalable, secure, object-oriented Web applications, with a focus on clean code, development standards, and optimal database Structures. Constantly pursuing to be a better software engineer. I am comfortable working In a team as well as an individual." />
 	<meta name="twitter:url" content="https://yash-trivedi-dev.github.io/" />
 	<meta name="twitter:image" content="https://yash-trivedi-dev.github.io/images/yash-trivedi.jpg" />
 	<meta name="twitter:card" content="summary_large_image" />
@@ -107,9 +110,11 @@
 									<div class="media-body p-2 mt-3">
 										<span class="subheading subheading-with-line"><small
 												class="pr-2 bg-white text-primary">2022 - Present</small></span>
-										<h4 class="heading"><a target="_blank" href="https://techeniac.com/">TechEniac Services LLP</a>
+										<h4 class="heading"><a target="_blank" href="https://techeniac.com/">TechEniac
+												Services LLP</a>
 										</h4>
-										<p>Here I'm working as a full time senior developer. Technologies, which I am working on Laravel, ReactJs, etc.</p>
+										<p>Here I'm working as a full time senior developer. Technologies, which I am
+											working on Laravel, ReactJs, etc.</p>
 									</div>
 								</div>
 							</div>
@@ -118,9 +123,11 @@
 									<div class="media-body p-2 mt-3">
 										<span class="subheading subheading-with-line"><small
 												class="pr-2 bg-white text-primary">2020 - 2022</small></span>
-										<h4 class="heading"><a target="_blank" href="https://goldengatetechnolabs.com/">GoldenGate
+										<h4 class="heading"><a target="_blank"
+												href="https://goldengatetechnolabs.com/">GoldenGate
 												Technolabs</a></h4>
-										<p>Here I have worked as a full time senior developer. Technologies, which I have worked on are Laravel, Wordpress, etc.</p>
+										<p>Here I have worked as a full time senior developer. Technologies, which I
+											have worked on are Laravel, Wordpress, etc.</p>
 									</div>
 								</div>
 							</div>
@@ -129,8 +136,10 @@
 									<div class="media-body p-2 mt-3">
 										<span class="subheading subheading-with-line"><small
 												class="pr-2 bg-white text-primary">2016 - 2020</small></span>
-										<h4 class="heading"><a target="_blank" href="http://codesnakers.com/">CodeSnakers</a></h4>
-										<p>Here I work with a great Mentor as a part time web developer. Technologies, which I have worked on are Laravel, Wordpress, etc.</p>
+										<h4 class="heading"><a target="_blank"
+												href="http://codesnakers.com/">CodeSnakers</a></h4>
+										<p>Here I work with a great Mentor as a part time web developer. Technologies,
+											which I have worked on are Laravel, Wordpress, etc.</p>
 									</div>
 								</div>
 							</div>
@@ -344,6 +353,7 @@
 						<p><span>LinkedIn:</span> <a href="https://www.linkedin.com/in/yash-trivedi/">@yash-trivedi</a>
 						</p>
 						<p><span>Skype:</span> <a href="skype:yash.trivedi.096?chat">@yash.trivedi.096</a></p>
+						<p><span>Github:</span> <a href="https://github.com/yash-trivedi-dev">@yash-trivedi-dev</a></p>
 					</div>
 				</div>
 				<div class="col-md-8 pl-md-5 heading-section ftco-animate">
@@ -387,6 +397,8 @@
 										class="icon-skype"></span></a></li>
 							<li class="ftco-animate"><a href="https://www.linkedin.com/in/yash-trivedi/"><span
 										class="icon-linkedin"></span></a></li>
+							<li class="ftco-animate"><a href="https://github.com/yash-trivedi-dev"><span
+										class="icon-github"></span></a></li>
 						</ul>
 					</div>
 				</div>
